# IOT_task

./: CMakeLists.txt  conanfile.txt
.devcontainer/: Dockerfile  devcontainer.json
Server/: readings.json  temperature.json
include/HTTPClient/: HTTPClient.hpp
include/JsonDataRW/: JsonDataRW.hpp
include/Sensors/: Sensor.hpp
include/SensorsServer/: SensorsServer.hpp
include/gRPC/client/: factorialClient.hpp
include/gRPC/server/: factorialServer.hpp
protos/: factorial.proto
src/: main.cpp
src/HTTPClient/: HTTPClient.cpp
src/JsonDataRW/: JsonDataRW.cpp
src/MQTT/: MQTT_Client.cpp
src/Sensors/: Sensor.cpp
src/SensorsClient/: SensorsClient.cpp
src/SensorsServer/: SensorsServer.cpp
src/gRPC/client/: factorialClient.cpp
src/gRPC/server/: factorialServer.cpp
